# prud

./: .gitignore  Dockerfile  build-api.sh  build-core.sh  docker-compose.dev.yaml  docker-compose.yaml  main.py  requirements.txt
.github/: dependabot.yml
.github/workflows/: prud-api.yml  prud-core.yml  prud-web.yml
common/: .gitignore
common/confloader/: confloader.py  pyproject.toml  setup.py
common/confloader/confloader.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
common/prud-db/: pruddb.py  pyproject.toml  setup.py
common/prud-db/Prud_DB_Connection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
common/prud-db/pruddb/: __init__.py  exceptions.py  pruddb.py
core/: .gitignore  Dockerfile  alembic.ini  local-requirements.txt  main.py  requirements.txt  run-core.sh
core/alembic/: env.py
core/alembic/versions/: 0a42ec9b08ea_pls_make_this_work.py  2e98d950adfa_initial.py  ab089d123542_added_sent_field_to_polyringpost.py  da3dc6950230_updated_field.py  e1b8c23747ac_add_additional_fields_to_feeds.py
core/prud/: config.py  discord.py  feedutil.py  looputil.py  polyring.py
prud/: config.py  db.py  discord.py  feedutil.py  polyring.py
web/api/: Dockerfile  config.py  main.py  requirements.txt  site-requirements.txt  start-api.sh
web/prud-web/: Dockerfile  next.config.js  package-lock.json  package.json  start-frontend.sh  tailwind.config.js
web/prud-web/src/app/: globals.css  layout.tsx
web/prud-web/src/components/: ConfirmField.tsx  EnableFeedButton.tsx  FeedContainer.tsx  FeedList.tsx  Footer.tsx  PostContainer.tsx  PostList.tsx  TitleBar.tsx  titlebar.tsx
web/prud-web/src/pages/: index.tsx  login.tsx
web/prud-web/src/util/: prud.ts
(+1 files in other folders)
