[project]
name = "confloader"
description = "Facilitates loading configuration variables"
authors = [{ name = "nighmared", email = "joniii@ethz.wtf" }]
version = "0.1.2"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/Nighmared/prud"
