[project]
name = "pruddb"
description = "Simple Library used by prud microservices to interact with the central database"
authors = [{ name = "nighmared", email = "joniii@ethz.wtf" }]
version = "1.0.1"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/Nighmared/prud"
